# astra

./: .env  .gitignore  DOCKER.md  Makefile  docker-compose.prod.yml  docker-compose.yml  docker-start.sh
.cursorules/: PRS  Promp  devplan  master
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh
backend/app/: config.py  main.py
backend/app/api/routes/: __init__.py  analytics.py  auth.py  health.py  ingest.py  query.py
backend/app/core/: auth.py  chroma_client.py  chunking.py  embeddings.py  indexing.py  ingest.py  llm.py  query.py  text_utils.py
backend/app/core/parsers/: __init__.py  base.py  docx_parser.py  html_parser.py  pdf_parser.py  txt_parser.py
backend/app/db/: init_db.py  session.py
backend/app/db/models/: __init__.py  analytics.py  document.py  user.py
backend/docs/: EMBEDDING_INDEXING.md  QUERY_MODULE.md
backend/scripts/: ingest_and_index.py
backend/tests/: __init__.py  conftest.py  test_indexing.py  test_query.py
docs/: INGESTION_PIPELINE.md
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: Navbar.tsx
frontend/app/components/Auth/: ProtectedRoute.tsx
frontend/app/components/Chat/: ChatWindow.tsx  DocumentViewerModal.tsx  (+1 more)
frontend/app/contexts/: AuthContext.tsx
frontend/app/lib/: api.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/store/: useStore.ts
(+8 files in other folders)
